--- a/wiki/it/Macro_FCGear.html
+++ b/wiki/it/Macro_FCGear.html
@@ -1,18 +1,16 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Macro FCGear/it</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="it" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Macro+FCGear&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/Macro_FCGear.html" class="mw-pt-progress mw-pt-progress--med" title="Makro FCGear (64% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/Macro_FCGear.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro FCGear (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_FCGear.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro FCGear (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><a href="../fr/Macro_FCGear.html" class="mw-pt-progress mw-pt-progress--high" title="Macro FCGear (86% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
+<li><a href="../fr/Macro_FCGear.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro FCGear (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Macro_FCGear.html" class="mw-pt-progress mw-pt-progress--low" title="Makrodefinicja: FCGear (7% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ru/Macro_FCGear.html" class="mw-pt-progress mw-pt-progress--high" title="&#1052;&#1072;&#1082;&#1088;&#1086; &#1064;&#1077;&#1089;&#1090;&#1077;&#1088;&#1085;&#1103; (FCGear) (71% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li></ul></div>
-<div class="mw-translate-fuzzy">
-<div id="itsfree" class="warning-box">Questa macro &egrave; stata convertita in un ambiente chiamato <a href="../index.php?title=FCGear_Workbench/it&amp;action=edit&amp;redlink=1.html" class="new" title="FCGear Workbench/it (page does not exist)"> Ambiente FCGear</a>. Utilizza l'ambiente invece di questa macro poich&eacute; &egrave; attivamente gestito.</div>
-</div>
+<div class="warning-box">Questa macro &egrave; stata convertita in un ambiente denominato <a href="../index.php?title=Ambiente_Gear&amp;action=edit&amp;redlink=1.html" class="new" title="Ambiente Gear (page does not exist)">Ambiente Gear</a>. Si prega di utilizzare l'ambiente anzich&eacute; questa macro, poich&eacute; &egrave; attivamente gestito.</div>
 <div class="mw-translate-fuzzy">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
-<p><span typeof="mw:File"><a href="../File/Gear_workbench_icon.svg" class="mw-file-description"><img src="../File/Gear_workbench_icon.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span> </span>
+<p><span typeof="mw:File"><a href="../index.php?title=Gear_workbench_icon.svg&amp;filetimestamp=20240901100525&amp;.html" class="mw-file-description"><img src="../File/Gear_workbench_icon.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span> </span>
 Ingranaggi
 </p>
 </td></tr>
@@ -124,30 +122,30 @@ Ingranaggi
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20251129080147
+Cached time: 20260114123355
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.046 seconds
-Real time usage: 0.061 seconds
-Preprocessor visited node count: 111/1000000
-Post&#8208;expand include size: 2457/2097152 bytes
-Template argument size: 370/2097152 bytes
+CPU time usage: 0.044 seconds
+Real time usage: 0.086 seconds
+Preprocessor visited node count: 110/1000000
+Post&#8208;expand include size: 2437/2097152 bytes
+Template argument size: 363/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1302/5000000 bytes
+Unstrip post&#8208;expand size: 1313/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    8.134      1 -total
- 41.76%    3.397      1 Template:Macro/it
- 19.62%    1.596      1 Template:VeryImportantMessage
- 18.20%    1.480      1 Template:Caption
- 16.70%    1.358      1 Template:Clear
+100.00%    8.797      1 -total
+ 32.62%    2.869      1 Template:Macro/it
+ 24.97%    2.197      1 Template:Clear
+ 20.51%    1.804      1 Template:VeryImportantMessage
+ 18.28%    1.608      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:62417-0!canonical and timestamp 20251129080147 and revision id 1706146. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:62417-0!canonical and timestamp 20260114123355 and revision id 1738132. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
