--- a/wiki/it/Macro_FCGear.html
+++ b/wiki/it/Macro_FCGear.html
@@ -5,7 +5,7 @@
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Macro_FCGear.html" class="mw-pt-progress mw-pt-progress--low" title="Makrodefinicja: FCGear (7% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ru/Macro_FCGear.html" class="mw-pt-progress mw-pt-progress--high" title="&#1052;&#1072;&#1082;&#1088;&#1086; &#1064;&#1077;&#1089;&#1090;&#1077;&#1088;&#1085;&#1103; (FCGear) (71% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li></ul></div>
-<div class="warning-box">Questa macro &egrave; stata convertita in un ambiente denominato <a href="../index.php?title=Ambiente_Gear&amp;action=edit&amp;redlink=1.html" class="new" title="Ambiente Gear (page does not exist)">Ambiente Gear</a>. Si prega di utilizzare l'ambiente anzich&eacute; questa macro, poich&eacute; &egrave; attivamente gestito.</div>
+<div class="warning-box">Questa macro &egrave; stata convertita in un ambiente denominato <a href="../it/Gear_Workbench.html" title="Gear Workbench/it">Gear</a>. Si prega di utilizzare l'ambiente anzich&eacute; questa macro, poich&eacute; &egrave; attivamente gestito.</div>
 <div class="mw-translate-fuzzy">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
 <tbody><tr>
@@ -122,15 +122,15 @@ Ingranaggi
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260114123355
+Cached time: 20260114123454
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.044 seconds
-Real time usage: 0.086 seconds
+CPU time usage: 0.049 seconds
+Real time usage: 0.076 seconds
 Preprocessor visited node count: 110/1000000
-Post&#8208;expand include size: 2437/2097152 bytes
-Template argument size: 363/2097152 bytes
+Post&#8208;expand include size: 2446/2097152 bytes
+Template argument size: 372/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -138,14 +138,14 @@ Unstrip post&#8208;expand size: 1313/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    8.797      1 -total
- 32.62%    2.869      1 Template:Macro/it
- 24.97%    2.197      1 Template:Clear
- 20.51%    1.804      1 Template:VeryImportantMessage
- 18.28%    1.608      1 Template:Caption
+100.00%   11.205      1 -total
+ 32.55%    3.647      1 Template:Macro/it
+ 25.75%    2.885      1 Template:VeryImportantMessage
+ 19.29%    2.161      1 Template:Caption
+ 19.29%    2.161      1 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:62417-0!canonical and timestamp 20260114123355 and revision id 1738132. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:62417-0!canonical and timestamp 20260114123453 and revision id 1738134. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
