--- a/wiki/it/Macro_FCGear.html
+++ b/wiki/it/Macro_FCGear.html
@@ -2,7 +2,7 @@
 <li><a href="../de/Macro_FCGear.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro FCGear (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_FCGear.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro FCGear (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Macro_FCGear.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro FCGear (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Macro_FCGear.html" class="mw-pt-progress mw-pt-progress--low" title="Makrodefinicja: FCGear (7% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ru/Macro_FCGear.html" class="mw-pt-progress mw-pt-progress--high" title="&#1052;&#1072;&#1082;&#1088;&#1086; &#1064;&#1077;&#1089;&#1090;&#1077;&#1088;&#1085;&#1103; (FCGear) (71% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li></ul></div>
 <div class="warning-box">Questa macro &egrave; stata convertita in un ambiente denominato <a href="../it/Gear_Workbench.html" title="Gear Workbench/it">Gear</a>. Si prega di utilizzare l'ambiente anzich&eacute; questa macro, poich&eacute; &egrave; attivamente gestito.</div>
@@ -77,11 +77,8 @@ Ingranaggi
 <p><span id="Description"></span>
 </p>
 <h2><span class="mw-headline" id="Descrizione">Descrizione</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>Additional Workbench to create different types of gears, involute gear, involute rack, cycloide gear, bevel gear.
-</p>
-</div>
-<p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FCGear_00.png&amp;filetimestamp=20151026183034&amp;.html" class="mw-file-description"><img src="../File/FCGear_00.png" decoding="async" width="739" height="386" class="mw-file-element" data-file-width="739" data-file-height="386"></a></span>
+<p>Ambiente complementare per creare diversi tipi di ingranaggi, ingranaggi evolventi, cremagliere, ingranaggi cicloidi o conici.
+</p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FCGear_00.png&amp;filetimestamp=20151026183034&amp;.html" class="mw-file-description"><img src="../File/FCGear_00.png" decoding="async" width="739" height="386" class="mw-file-element" data-file-width="739" data-file-height="386"></a></span>
 </p>
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">FCGear</p>
 <p><span id="Install"></span>
@@ -116,30 +113,30 @@ Ingranaggi
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260114123551
+Cached time: 20260114123605
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.042 seconds
+CPU time usage: 0.044 seconds
 Real time usage: 0.069 seconds
-Preprocessor visited node count: 108/1000000
+Preprocessor visited node count: 107/1000000
 Post&#8208;expand include size: 2440/2097152 bytes
 Template argument size: 368/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1313/5000000 bytes
+Unstrip post&#8208;expand size: 1317/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    9.913      1 -total
- 35.15%    3.484      1 Template:Macro/it
- 31.73%    3.145      1 Template:VeryImportantMessage
- 17.28%    1.713      1 Template:Clear
- 12.61%    1.250      1 Template:Caption
+100.00%    7.154      1 -total
+ 35.88%    2.567      1 Template:Macro/it
+ 25.96%    1.857      1 Template:VeryImportantMessage
+ 19.05%    1.363      1 Template:Caption
+ 15.16%    1.085      1 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:62417-0!canonical and timestamp 20260114123551 and revision id 1738138. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:62417-0!canonical and timestamp 20260114123605 and revision id 1738140. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
