--- a/wiki/it/Macro_Spring.html
+++ b/wiki/it/Macro_Spring.html
@@ -1,8 +1,8 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Macro Spring/it</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="it" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Macro+Spring&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/Macro_Spring.html" class="mw-pt-progress mw-pt-progress--med" title="Macro Spring/de (50% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/Macro_Spring.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro Feder (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_Spring.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro Spring (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Macro_Spring.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro Spring (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="it" dir="ltr">italiano</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Macro_Spring.html" class="mw-pt-progress mw-pt-progress--complete" title="Makrodefinicja: Spr&#281;&#380;yna (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
 <tbody><tr>
@@ -72,11 +72,11 @@ Spring Simul
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr>
 </tbody></table>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Description">Description</span></h2>
-</div>
-<div class="mw-translate-fuzzy">
+<p><span id="Description"></span>
+</p>
 <h2><span class="mw-headline" id="Descrizione">Descrizione</span></h2>
+<div class="mw-translate-fuzzy">
+<h2><span class="mw-headline" id="Descrizione_2">Descrizione</span></h2>
 <p>Simula la compressione e la distensione di una molla.
 </p>
 </div>
@@ -137,30 +137,30 @@ for ii2 in range(int(60)):
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20251009172345
+Cached time: 20260114123709
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.060 seconds
-Real time usage: 0.073 seconds
+CPU time usage: 0.036 seconds
+Real time usage: 0.067 seconds
 Preprocessor visited node count: 124/1000000
 Post&#8208;expand include size: 2485/2097152 bytes
 Template argument size: 1383/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1916/5000000 bytes
+Unstrip post&#8208;expand size: 1919/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    7.571      1 -total
- 41.20%    3.119      1 Template:Macro/it
- 23.33%    1.766      1 Template:MacroCode
- 17.37%    1.315      1 Template:KEY
- 10.41%    0.788      2 Template:Clear
+100.00%   11.852      1 -total
+ 35.97%    4.263      1 Template:MacroCode
+ 30.76%    3.646      1 Template:Macro/it
+ 14.33%    1.699      1 Template:KEY
+ 13.93%    1.651      2 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:41880-0!canonical and timestamp 20251009172345 and revision id 1659873. Rendering was triggered because: api-parse
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:41880-0!canonical and timestamp 20260114123709 and revision id 1738144. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
