--- a/wiki/it/Macro_Spring.html
+++ b/wiki/it/Macro_Spring.html
@@ -2,7 +2,7 @@
 <li><a href="../de/Macro_Spring.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro Feder (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_Spring.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro Spring (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Macro_Spring.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro Spring (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Macro_Spring.html" class="mw-pt-progress mw-pt-progress--complete" title="Makrodefinicja: Spr&#281;&#380;yna (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
 <tbody><tr>
@@ -75,16 +75,11 @@ Spring Simul
 <p><span id="Description"></span>
 </p>
 <h2><span class="mw-headline" id="Descrizione">Descrizione</span></h2>
-<div class="mw-translate-fuzzy">
-<h2><span class="mw-headline" id="Descrizione_2">Descrizione</span></h2>
-<p>Simula la compressione e la distensione di una molla.
+<p>Simula la compressione e la decompressione di una molla.
+</p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Spring_00.gif&amp;filetimestamp=20140929164955&amp;.html" class="mw-file-description"><img src="../File/Spring_00.gif" decoding="async" width="425" height="412" class="mw-file-element" data-file-width="425" data-file-height="412"></a></span>
+</p><p><span id="Usage"></span>
 </p>
-</div>
-<p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Spring_00.gif&amp;filetimestamp=20140929164955&amp;.html" class="mw-file-description"><img src="../File/Spring_00.gif" decoding="async" width="425" height="412" class="mw-file-element" data-file-width="425" data-file-height="412"></a></span>
-</p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Usage">Usage</span></h2>
-</div>
+<h2><span class="mw-headline" id="Utilizzo">Utilizzo</span></h2>
 <p>Per eseguire la macro aprire in FreeCAD i 2 file indicati sotto (Spring.FCMacro e Spring.FCStd) con 2 schermi (Menu: Finestre &rarr; Affiancate) poi fare clic nella finestra e nella macro fare clic su <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">F6</span> (avvia macro), oppure avviare la macro con <span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Std_DlgMacroExecuteDirect.svg&amp;filetimestamp=20240704212444&amp;.html" class="mw-file-description"><img src="../File/Std_DlgMacroExecuteDirect.svg" decoding="async" width="64" height="64" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
 </p>
 <figure class="mw-halign-left" typeof="mw:File"><a href="../index.php?title=Spring_02.png&amp;filetimestamp=20140929165104&amp;.html" class="mw-file-description"><img src="../File/Spring_02.png" decoding="async" width="300" height="155" class="mw-file-element" data-file-width="882" data-file-height="455"></a><figcaption></figcaption></figure><div style="clear:both"></div>
@@ -128,39 +123,37 @@ for ii2 in range(int(60)):
     time.sleep(0.1)</pre>
 <p><br>
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
 <h2><span class="mw-headline" id="Link">Link</span></h2>
-</div>
 <h2><span class="mw-headline" id="Link_2">Link</span></h2>
 <p>La pagina della discussione nel forum: <a rel="nofollow" class="external text" href="http://forum.freecad.org/viewtopic.php?f=22&amp;t=7449#p62193">scripting animations</a>
 </p>
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260114123709
+Cached time: 20260114123731
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.036 seconds
-Real time usage: 0.067 seconds
-Preprocessor visited node count: 124/1000000
+CPU time usage: 0.063 seconds
+Real time usage: 0.070 seconds
+Preprocessor visited node count: 119/1000000
 Post&#8208;expand include size: 2485/2097152 bytes
 Template argument size: 1383/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1919/5000000 bytes
+Unstrip post&#8208;expand size: 1923/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   11.852      1 -total
- 35.97%    4.263      1 Template:MacroCode
- 30.76%    3.646      1 Template:Macro/it
- 14.33%    1.699      1 Template:KEY
- 13.93%    1.651      2 Template:Clear
+100.00%    7.618      1 -total
+ 37.56%    2.861      1 Template:Macro/it
+ 20.96%    1.597      1 Template:MacroCode
+ 19.06%    1.452      1 Template:KEY
+ 15.07%    1.148      2 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:41880-0!canonical and timestamp 20260114123709 and revision id 1738144. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:41880-0!canonical and timestamp 20260114123731 and revision id 1738150. Rendering was triggered because: api-parse
  -->
 </div>
 </div><script src="../site.js"></script>
