--- a/wiki/it/App_DocumentObject.html
+++ b/wiki/it/App_DocumentObject.html
@@ -38,12 +38,10 @@
 <h3><span class="mw-headline" id="Dati">Dati</span></h3>
 <p><span style="color: #fdfdfd; background-color: #909090; font-size: 112%; font-weight: bold; margin-bottom: .3em; padding: 0px 10px 1px 10px; page-break-after: avoid;">Base</span>
 </p>
-<div class="mw-translate-fuzzy">
-<ul><li><span style="font-size:60%; padding-right:0.8em;">Dati</span><b>Label</b><span style="font-size:80%;"> (<code>String</code>)</span>: il nome di questo oggetto modificabile dall'utente, &egrave; una stringa UTF8 arbitraria. Di default, &egrave; uguale al <code>Name</code>.</li>
-<li><span style="font-size:60%; padding-right:0.8em;">Dati</span><b>Label2</b><span style="font-size:80%;"> (<code>String</code>)</span>: una descrizione modificabile dall'utente pi&ugrave; lunga di questo oggetto, &egrave; una stringa UTF8 arbitraria che pu&ograve; includere nuove righe. Di default, &egrave; una stringa vuota <code>""</code>.</li>
-<li><span style="font-size:60%; padding-right:0.8em;">Dati</span><b>Expression Engine</b><span style="font-size:80%;"> (<code>ExpressionEngine</code>)</span>: un elenco di espressioni.</li>
-<li><span style="font-size:60%; padding-right:0.8em;">Dati</span><b>Visibility</b><span style="font-size:80%;"> (<code>Bool</code>)</span>: se visualizzare l'oggetto o no.</li></ul>
-</div>
+<ul><li><span style="font-size:60%; padding-right:0.8em;">Dati</span><b>Label</b><span style="font-size:80%;"> (<code>String</code>)</span></li>
+<li><span style="font-size:60%; padding-right:0.8em;">Dati<span style="font-style:italic;"> (Hidden)</span></span><b>Label2</b><span style="font-size:80%;"> (<code>String</code>)</span></li>
+<li><span style="font-size:60%; padding-right:0.8em;">Dati<span style="font-style:italic;"> (Hidden)</span></span><b>Expression Engine</b><span style="font-size:80%;"> (<code>ExpressionEngine</code>)</span></li>
+<li><span style="font-size:60%; padding-right:0.8em;">Dati<span style="font-style:italic;"> (Hidden)</span></span><b>Visibility</b><span style="font-size:80%;"> (<code>Bool</code>)</span></li></ul>
 <p><span id="Scripting"></span>
 </p>
 <h2><span class="mw-headline" id="Script">Script</span></h2>
@@ -87,15 +85,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260114125211
+Cached time: 20260114125236
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.057 seconds
-Real time usage: 0.077 seconds
-Preprocessor visited node count: 382/1000000
-Post&#8208;expand include size: 13373/2097152 bytes
-Template argument size: 3644/2097152 bytes
+CPU time usage: 0.055 seconds
+Real time usage: 0.070 seconds
+Preprocessor visited node count: 374/1000000
+Post&#8208;expand include size: 13914/2097152 bytes
+Template argument size: 3690/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -103,19 +101,19 @@ Unstrip post&#8208;expand size: 2319/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   21.474      1 -total
- 21.02%    4.515      4 Template:PropertyData
- 17.31%    3.718      1 Template:Userdocnavi/it
- 15.87%    3.408      4 Template:Variable
- 12.07%    2.593      2 Template:Navigation_menu_2
- 10.93%    2.348      1 Template:Document_objects_navi/it
- 10.54%    2.264      1 Template:TitleProperty
-  8.52%    1.830      2 Template:Caption
-  6.65%    1.429      1 Template:Value
-  6.59%    1.415      1 Template:Code
+100.00%   19.028      1 -total
+ 21.85%    4.158      1 Template:Userdocnavi/it
+ 20.89%    3.975      4 Template:PropertyData
+ 14.47%    2.753      1 Template:Document_objects_navi/it
+ 14.24%    2.710      4 Template:Variable
+ 12.90%    2.454      2 Template:Navigation_menu_2
+  8.92%    1.698      1 Template:TitleProperty
+  6.85%    1.304      1 Template:Code
+  6.42%    1.221      2 Template:Caption
+  6.15%    1.170      7 Template:Incode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:172813-0!canonical and timestamp 20260114125211 and revision id 1738152. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:172813-0!canonical and timestamp 20260114125235 and revision id 1738155. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
