--- a/wiki/it/App_DocumentObject.html
+++ b/wiki/it/App_DocumentObject.html
@@ -2,7 +2,7 @@
 <li><a href="../de/App_DocumentObject.html" class="mw-pt-progress mw-pt-progress--complete" title="App DocumentObject (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../App_DocumentObject.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="App DocumentObject (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/App_DocumentObject.html" class="mw-pt-progress mw-pt-progress--complete" title="App DocumentObject (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/App_DocumentObject.html" class="mw-pt-progress mw-pt-progress--complete" title="App: Obiekt dokumentu (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ru/App_DocumentObject.html" class="mw-pt-progress mw-pt-progress--high" title="&#1054;&#1073;&#1098;&#1077;&#1082;&#1090; App DocumentObject (81% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li></ul></div>
 <div style="clear:right; margin-bottom: .5em; float: right; padding: .5em 0 .8em 1.4em; background: none;"><meta property="mw:PageProp/toc"></div>
@@ -32,7 +32,7 @@
 </p>
 <h2><span id="Propriet.C3.A0"></span><span class="mw-headline" id="Propriet&agrave;">Propriet&agrave;</span></h2>
 <p>Vedere <a href="../it/Property.html" title="Property/it">Propriet&agrave;</a> per tutti i tipi di propriet&agrave; che possono avere gli oggetti con script.
-</p><p>See <a href="../Part_Feature.html#Properties" title="Part Feature">Part Feature</a> for an explanation of the properties listed below.
+</p><p>Per una spiegazione delle propriet&agrave; elencate di seguito, vedere <a href="../it/Part_Feature.html#Properties" title="Part Feature/it">Feature di Part</a>.
 </p><p><span id="Data"></span>
 </p>
 <h3><span class="mw-headline" id="Dati">Dati</span></h3>
@@ -85,35 +85,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260114125236
+Cached time: 20260114125326
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.055 seconds
-Real time usage: 0.070 seconds
+CPU time usage: 0.063 seconds
+Real time usage: 0.107 seconds
 Preprocessor visited node count: 374/1000000
 Post&#8208;expand include size: 13914/2097152 bytes
 Template argument size: 3690/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 2319/5000000 bytes
+Unstrip post&#8208;expand size: 2323/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   19.028      1 -total
- 21.85%    4.158      1 Template:Userdocnavi/it
- 20.89%    3.975      4 Template:PropertyData
- 14.47%    2.753      1 Template:Document_objects_navi/it
- 14.24%    2.710      4 Template:Variable
- 12.90%    2.454      2 Template:Navigation_menu_2
-  8.92%    1.698      1 Template:TitleProperty
-  6.85%    1.304      1 Template:Code
-  6.42%    1.221      2 Template:Caption
-  6.15%    1.170      7 Template:Incode
+100.00%   34.383      1 -total
+ 20.39%    7.010      1 Template:Userdocnavi/it
+ 19.79%    6.805      4 Template:PropertyData
+ 19.62%    6.746      1 Template:Document_objects_navi/it
+ 11.06%    3.803      1 Template:TitleProperty
+ 11.03%    3.794      2 Template:Navigation_menu_2
+  9.74%    3.349      4 Template:Variable
+  8.20%    2.821      2 Template:Caption
+  4.98%    1.714      1 Template:Emphasis
+  4.91%    1.688      1 Template:Code
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:172813-0!canonical and timestamp 20260114125235 and revision id 1738155. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:172813-0!canonical and timestamp 20260114125326 and revision id 1738157. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
