--- a/wiki/it/Macro_FCCamera.html
+++ b/wiki/it/Macro_FCCamera.html
@@ -1,11 +1,10 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Macro FCCamera/it</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="it" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Macro+FCCamera&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/Macro_FCCamera.html" class="mw-pt-progress mw-pt-progress--med" title="Makro FCCamera (41% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/Macro_FCCamera.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro FCCamera (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_FCCamera.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro FCCamera (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><a href="../fr/Macro_FCCamera.html" class="mw-pt-progress mw-pt-progress--high" title="Macro FCCamera (93% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
+<li><a href="../fr/Macro_FCCamera.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro FCCamera (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Macro_FCCamera.html" class="mw-pt-progress mw-pt-progress--low" title="Makrodefinicja: Uj&#281;cie widoku FC (2% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ru/Macro_FCCamera.html" class="mw-pt-progress mw-pt-progress--low" title="&#1052;&#1072;&#1082;&#1088;&#1086;&#1089; FCCamera (9% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li></ul></div>
-<div class="mw-translate-fuzzy">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
@@ -74,7 +73,6 @@ Posizione camera
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr>
 </tbody></table>
-</div>
 <p><span id="Description"></span>
 </p>
 <h2><span class="mw-headline" id="Descrizione">Descrizione</span></h2>
@@ -304,31 +302,31 @@ webbrowser.open("https://gist.githubusercontent.com/mario52a/4aa545c23b323cf6882
 <ul><li><b>ver 0.2 25/02/2015&nbsp;:</b> correct names files in for compatibility Linux (case sensitive) thanks microelly2</li></ul>
 <!-- 
 NewPP limit report
-Cached time: 20251016100019
+Cached time: 20260114133439
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.147 seconds
-Real time usage: 0.269 seconds
-Preprocessor visited node count: 338/1000000
+CPU time usage: 0.088 seconds
+Real time usage: 0.227 seconds
+Preprocessor visited node count: 337/1000000
 Post&#8208;expand include size: 9062/2097152 bytes
 Template argument size: 2717/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 3/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 14482/5000000 bytes
+Unstrip post&#8208;expand size: 14493/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  123.871      1 -total
-  5.29%    6.550      3 Template:Code
-  5.09%    6.304      1 Template:Codeextralink
-  4.07%    5.046     17 Template:KEY
-  3.30%    4.082      1 Template:Macro/it
-  2.00%    2.476      4 Template:Clear
+100.00%  121.693      1 -total
+  6.53%    7.944      3 Template:Code
+  6.10%    7.423      1 Template:Macro/it
+  4.03%    4.899      4 Template:Clear
+  3.48%    4.239      1 Template:Codeextralink
+  2.64%    3.207     17 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:55888-0!canonical and timestamp 20251016100019 and revision id 1664474. Rendering was triggered because: api-parse
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:55888-0!canonical and timestamp 20260114133437 and revision id 1738159. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
